success! partial markdown is now embedded into html pages. included a fixed button to jump back to top.

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -253,6 +253,53 @@ body {
   transform: translateY(-50%);
 }
 
+/* Transcript - markdown */
+.to-top {
+  display: none;
+  position: fixed;
+  bottom: 1.6em;
+  right: 50%;
+  width: 50px;
+  height: 50px;
+  line-height: 3rem;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  background: #306850;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.05);
+  transition: border 0.3s ease-in-out;
+  border-radius: 15px;
+  transform: translate(50%, 0);
+  font-size: 30px;
+  border: 2px solid #e0f8cf;
+  color: #e0f8cf;
+}
+
+.fa-lg {
+  font-size: 1.33333333em;
+  line-height: 0.75em;
+  vertical-align: -15%;
+}
+
+.fa-angle-up:before {
+  content: "\f106";
+}
+
+.screen-reader-text {
+  position: absolute;
+  left: -1000em;
+}
+
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
+}
+
 /* slideshow */
 
 #slideshow_proto {
